--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -6,6 +6,8 @@
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
   <body>
+    <script>
+      CMS.init({ config_path: "/admin/config.yml" });
+    </script>
   </body>
 </html>
- 
